# code-brain

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  agent-wiring-plan-prompt.md  autoresearch-skill-optimizer-prompt.md  claude-code-restructure-prompt.md  life-systems-L4Q7-prompt.md  personal-context-v2-interview-prompt.md  test-prompts.md
agents-sdk/: .env.example  AUDIT-2026-04-09-agent-downsizing.md  AUDIT-2026-04-28-process-inbox-reenable.md  BUGFIX-2026-04-07-launchd-path.md  KEYCHAIN-SETUP.md  config.toml  pyproject.toml  test_phase1_smoke.py
agents-sdk/agents/: __init__.py  daily_driver.py  deep_researcher.py  flush.py  gemini_researcher.py  job_feed.py  knowledge_lint.py  meeting_defender.py  meta_agent.py  pr_digest.py  preserve_session.py  process_inbox.py  skill_optimizer.py  spending_analysis.py  sprint_health.py  substack_drafter.py  vault_critic.py  vault_indexer.py  vault_synthesizer.py
agents-sdk/agents/knowledge_loop/: EXPLANATION.md
agents-sdk/audit/: token_audit.py  token_audit_report.md
agents-sdk/benchmarks/topic_20/: README.md  (+1 more)
agents-sdk/docs/: alienware-tier-c-wake-architecture-2026-05-21.md  local-tts-decision-record.md  local-tts-rollback.md  local-tts-spotify-handoff.md  multi-cli-integration-patterns.md
agents-sdk/lib/: __init__.py  artifact_loader.py  baton.py  benchmark_scorers.py  cli_runners.py  concept_edges.py  config.py  critic_selector.py  critique_prompt.py  csv_sanitizer.py  custom_tools.py  filelock.py  fleet_memory.py  fleet_summary.py  gemma4_benchmark.py  hybrid_router.py  job_db.py  job_renderer.py  job_rules.py  job_scoring.py  job_sources.py  job_types.py  keychain.py  kokoro_synth.py  lint_report.py  logging_setup.py  markdown_to_speech.py  pushover.py  retrieval_diversity.py  session_transcript.py  skill_loader.py  vault_io.py  wol.py
agents-sdk/policies/: substack_drafter.yaml
agents-sdk/prompts/: vault-critic-prompt-template.md  vault-critic-standing-context.md
agents-sdk/schedules/: com.sean.agent-fleet-wake-scheduler.plist  com.sean.agent.daily-evening.plist  com.sean.agent.daily-morning-baton.plist  com.sean.agent.daily-morning.plist  com.sean.agent.deep-researcher.plist  com.sean.agent.gemini-researcher.plist  com.sean.agent.knowledge-lint.plist  com.sean.agent.meeting-defender.plist  com.sean.agent.meta-agent.plist  com.sean.agent.pr-digest.plist  com.sean.agent.process-inbox.plist  com.sean.agent.sprint-health.plist  com.sean.agent.substack-drafter.plist  com.sean.agent.vault-critic.plist  com.sean.agent.vault-indexer.plist  com.sean.agent.vault-synthesizer.plist  com.sean.agent.weekly-review.plist  com.sean.job-feed.plist  com.sean.service.ldr-web.plist  install_schedules.sh
agents-sdk/scripts/: auto_stub_people.py  benchmark_lmstudio_model.py  benchmark_ollama_model.py  build_mbp_ollama_variants.sh  build_stylometry_baseline.py  calibrate_stylometry_threshold.py  close_stale_contradiction_edges.py  compare_convergence.py  doc_to_audio.py  gemini_dr.py  install_tts_models.sh  mock_interview_loop.py  phase6_gatecheck.py  query.py  run_gemma4_benchmark.py  run_mbp_ollama_benchmarks.sh  sample_ollama_rss.sh  schedule_wakes.sh  sleep_alienware.py  tier_c_soak.py  update_status.py  validate_prompt_caching.py  verify_mbp_wol.py  wake_alienware.py
agents-sdk/tests/: conftest.py  test_artifact_loader.py  test_auto_stub_people.py  test_benchmark_scorers.py  test_cli_runners.py  test_concept_edges.py  test_config.py  test_critic_health_summary.py  test_critic_selector.py  test_critique_prompt.py  test_daily_driver_artifacts.py  test_daily_driver_job_feed.py  test_daily_driver_vault_health.py  test_decision.py  test_doc_to_audio_cli.py  test_filelock.py  test_fleet_memory.py  test_fleet_memory_mcp.py  test_fleet_summary_vault_critic.py  test_flush.py  test_flush_trigger.py  test_gemini_dr.py  test_gemini_researcher.py  test_gemma4_benchmark.py  test_hybrid_router.py  test_job_db.py  test_job_feed_e2e.py  test_job_renderer.py  test_job_rules.py  test_job_scoring.py  test_job_sources.py  test_job_types.py  test_judge_evaluate.py  test_judge_ledger.py  test_judge_policy.py  test_judge_runner.py  test_judge_schema.py  test_knowledge_lint.py  test_kokoro_synth.py  test_logging_setup.py  (+23 more)
tools/llm-council/: .env.example  .gitignore  README.md  model-selection-2026-05-14.md  openrouter-models-snapshot-2026-05-14.json  pyproject.toml
(+2653 files in other folders)
