[project]
name = "claude-code-agents"
version = "0.1.0"
description = "Autonomous agents for the Claude Code Superuser Pack"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk==0.1.63",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "wakeonlan>=3.1,<4",
    "google-genai>=1.74.0,<2.0.0",
    "feedparser==6.0.12",
    "markdownify==1.2.2",
    "pyyaml==6.0.3",
    "respx==0.23.1",
    "kokoro-onnx>=0.5.0,<0.6",
    "soundfile>=0.12,<0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
daily-driver = "agents.daily_driver:main"
spending-analysis = "agents.spending_analysis:main"
process-inbox = "agents.process_inbox:main"
health-audit = "agents.health_audit:main"
md-to-anki = "agents.md_to_anki:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
