[project]
name = "claude-code-agents"
version = "0.1.0"
description = "Autonomous agents for the Claude Code Superuser Pack"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk==0.1.63",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "wakeonlan>=3.1,<4",
    "google-genai>=1.74.0,<2.0.0",
    "feedparser==6.0.12",
    "markdownify==1.2.2",
    "pyyaml==6.0.3",
    "respx==0.23.1",
    "kokoro-onnx>=0.5.0,<0.6",
    "soundfile>=0.12,<0.14",
    # Tier 2 retrofit (v3.37.0, 2026-05-16) — vault_synthesizer uses HDBSCAN
    # to cluster the retrieval pool so the LLM sees cross-domain candidates
    # instead of being crowded out by the densest concept region. Plan:
    # vault/20_projects/prj-job-hunt-2026/.../2026-05-13-vault-synthesizer-
    # retrofit-tiers.md §Tier 2.
    "hdbscan>=0.8.40,<0.9",
    # Judge layer (Council Gap-Fill 1 / Task 12, 2026-05-28): typed
    # ActionProposal + JudgeDecision schemas for the control-plane
    # interceptor at lib/judge/. Was previously pulled in transitively
    # via google-genai (2.12.5 in the venv) — promoting to an explicit
    # dep so a future google-genai bump can't silently break judge.
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
daily-driver = "agents.daily_driver:main"
spending-analysis = "agents.spending_analysis:main"
process-inbox = "agents.process_inbox:main"
health-audit = "agents.health_audit:main"
md-to-anki = "agents.md_to_anki:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
