[project]
name = "council"
version = "0.1.0"
description = "Multi-vendor LLM council for in-session critique. Inspired by Andrej Karpathy's llm-council."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["council"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
